<resources>
    <string name="app_name">Гороскоп</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">ДАЛЕЕ</string>
    <string name="skip">  ПРОПУСТИТЬ</string>
    <string name="start">НАЧАТЬ!</string>
    <string name="slide_1_title"> Мой гороскоп</string>
    <string name="slide_1_desc"> Откройте свой гороскоп прямо с вашего телефона или планшета </string>
    <string name="slide_2_title"> Узнайте о своей совместимости</string>
    <string name="slide_2_desc">Получите оценку своей астрологической совместимости с любимыми знаменитостями, чтобы узнать, как вы могли бы провести свою совместную жизнь.</string>
    <string name="slide_3_title">Звезды говорят</string>
    <string name="slide_3_desc">Узнайте, какое будущее звезды нам пророчат</string>
    <string name="slide_4_title">Откройте себя</string>
    <string name="slide_4_desc">Потрясающий способ узнать все
позитивные возможности дня и избежать подводных камней.
Проведите свой день наилучшим образом из всех возможных.</string>
    <string name="slide_5_scrin_1">Укажите дату своего рождения. Это нужно для составленных твоих особых гороскопов, а также нумерологического отчета и анализа совместности.</string>
    <string name="slide_5_scrin_2">Зная ваш пол, нам будет проще оценить твою личною и деловую стороны жизни, а также отношения.</string>
    <string name="hand1">Четко выраженный и не разорванный треугольник предсказывает достаток и богатство. Подобные люди будут обладать большим количеством денег. Целостная фигура указывает не только на получение материальных благ, но и о наличии навыков и таланта в процессе его сохранения.</string>
    <string name="hand2">Длинная, ярко выраженная линия ума, плавно пересекающая ладонь свидетельствует о наличии честолюбия, таланта, силы воли и недюжинных умственных способностей у человека. Подобные люди умеют руководить и отстаивать свою точку зрения.</string>
    <string name="hand3">Слишком длинная и прямая линия, которая оканчивается на ребре ладони, указывает на мощный интеллект и завидные способности и задатки, которые индивид использует в корыстных и эгоистичных целях. Подобные люди отличаются жадностью, расчетливостью и бесстрашием в движении к своей цели.</string>
    <string name="hand4">Короткая линия, достигающая середины ладони, свидетельствует о практичности, материальности и об отсутствии воображения. Слишком короткая линия, оканчивающаяся под бугром Сатурна – признак недостатка ума или предвестник короткой жизни.</string>
    <string name="hand5">Крест на ладони сообщает о  сложившихся неблагоприятных  условиях для перемен в жизни.  Вы творческая личность, и иногда  вы готовы бросить любимое дело,  чего мы делать не советуем. В этот  день очень рекомендуется  провести время со своей семьей.  Не тратьте время на пустые  разговоры. Сегодня самое лучшее  время, чтобы попросить прощения  у людей за причененные ранее  обиды. </string>
    <string name="hand6">Яркая, четкая, прямая линия без разрывов и изломов указывает на насыщенную и удачливую жизнь. Слабая линия или ее отсутствие указывает на слабость характера индивида, отсутствие силы воли и ведение бесцельного образа жизни.</string>
    <string name="hand7">Данная линия рассказывает о темпераменте человека, о способности любить и быть любимым, о самоотверженности, о доброте и об эмоциональной стороне жизни.
        Она проходит над линией головы под основанием пальцев и имеет либо изогнутую, либо прямую форму. Чем ярче и глубже линия, тем искреннее и благороднее человек, тем преданнее и сильнее будут его чувства и порывы.</string>
    <string name="hand8">Располагаются линии на ребре руки в промежутке между началом мизинца над линией сердца. Количество четких горизонтальных линий свидетельствует о количестве вероятностей заключения брака. Предсказать можно не только наличие в будущем любви, но и возраст, когда произойдет данное событие.</string>
    <string name="hand9">Короткая линия, достигающая середины ладони, свидетельствует о практичности, материальности и об отсутствии воображения. Слишком короткая линия, оканчивающаяся под бугром Сатурна – признак недостатка ума или предвестник короткой жизни.</string>
    <string name="hand10">Разорванный треугольник означает наличие достаточного количества денежных средств, но чрезмерные траты и неспособность к накоплению и приумножению.</string>
    <string name="play_again_desc">Чтобы снова увидеть слайдер приветствия, перейдите в «Настройки» -> «Приложения» -> «Ползунок Wellcome» -> «Очистить данные».</string>
    <string name="play_again">Начть снова</string>
    <string name="title_shop">Гороскоп</string>
    <string name="title_gifts">Рука</string>
    <string name="title_cart">Совмешность</string>
    <string name="title_profile">Совмешность</string>
    <string name="h1">Овен</string>
    <string name="h2">Телец</string>
    <string name="h3">Близнецы</string>
    <string name="h4">Рак</string>
    <string name="h5">Лев</string>
    <string name="h6">Дева</string>
    <string name="h7">Весы</string>
    <string name="h8">Скорпион</string>
    <string name="h9">Стрелец</string>
    <string name="h10">Козерог</string>
    <string name="h11">Водолей</string>
    <string name="h12">Рыбы</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Гороскоп</string>
    <string name="title_dashboard">Рука</string>
    <string name="title_notifications">Совмешность</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="described1">Овен открывает новый зодиакальный цикл, относится к стихии Огня, обладает особенной харизмой (качеством) первооткрывателя, инициативой и целеустремленностью. Даже обладающие спокойным темпераментом, Овны никогда не забывают про свои цели и, как правило, рано или поздно достигают желаемого. Инициатива и активность представителей этого знака позволяет находить новые задачи, которые Овен ставит перед своими последователями. Загореться идеей и зажечь ее огонь для других для Овна важнее, чем довести дело до конца. Рутинные обязанности, последовательность и педантичность — не являются сильными чертами этого знака. Напор, кратковременное мощное усилие, поиск цели и разведка боем — вот что выгодно отличает Овна от других знаков зодиака.</string>
    <string name="described2">Фиксированный знак стихии земли, созидатель и гурман, Телец воплощает собой принцип любви к жизни и ее благам, а также имеет качества упорства и практичности. Телец умеет и любит работать, терпеливо создает себе комфортные условия для жизни. Способен долго и терпеливо ждать созревания подходящих условий. Терпение Тельца удивительно, ему трудно учиться чему-то новому и приспосабливаться к незнакомым условиям.  Очень восприимчив ко всему прекрасному, обладает сильной интуицией, склонен анализировать ситуацию, прежде, чем совершать поступки.  Дар Тельца — воплощать красивые мечты в реальность.</string>
    <string name="described3">Знак подвижного креста стихии воздуха. Близнецы обладают сильным характером, энергичны, независимы и общительны. Коммуникабельны, с веселым характером и темпераментным любопытством. Близнецы легко устанавливают связи со множеством разноплановых людей. Интересные эрудированные собеседники, темпераментные и неутомимые, Близнецы живут активной и насыщенной жизнью, легко приспосабливаются к любой обстановке. Обеспечивают связи и потоки информации между людьми.</string>
    <string name="described4">Знак водной стихии находится под покровительством ночного светила. Управление Луны влияет на характер представителей этого знака, делая их ранимыми и чувствительными людьми.  Луна и водная стихия знака дают Раку способность к эмпатии, возможность мгновенно угадывать мысли и чаяния других людей. Это решительные и благородные люди, часто патриоты. Но если жизнь Рака была полна лишений и несправедливости с детства, то обладают коварством и харизмой гангстера. Влияют на других людей, могут подчинить себе ради достижения общей цели или выживания. Жесткие и проницательные руководители.</string>
    <string name="described5">Фиксированный знак стихии огня, Лев обладает даром созидания и настойчивостью в достижении своих целей. Это деятельный человек, стремящийся к успеху и популярности. Сильная, чувствительная и любящая натура, часто попадает под влияние эмоций и чувств. Лев великодушен, решителен и храбр. Самообладание и амбициозность являются сильными чертами этого знака. Не равнодушен к вниманию, лести и роскоши.</string>
    <string name="described6">Дева — второй знак земной стихии, олицетворяющий справедливость и чистоту.  Дева воплощает принцип порядка, победу разума над чувствами, умение видеть целое в деталях.  Дева больше других знаков зодиака стремится к совершенству во всем, учится всю жизнь, но также учит и других. Стремление к лучшему заставляет Деву подмечать изъяны во всем, что ее окружает, что требует исправления.</string>
    <string name="described7">Единственный неодушевленный символ в зодиакальном круге, Весы являются вторым знаком воздушной стихии. Отличительной чертой представителей этого знака является стремление к гармонии во всем. Чувствительные к прекрасному, прирожденные дипломаты, обладающие стойкостью духа и несгибаемой волей к победе в любом соперничестве, Весы часто выступают в роли судей, а также юристов на всех уровнях. Постоянство, надежность и созидательная сила — лучшие качества этого знака.</string>
    <string name="described8">Это фиксированный знак стихии воды. Скорпион обладает природным магнетизмом и сильным характером. Выносливый, сдержанный в словах и эмоциях, Скорпион умеет хранить секреты и ценит верность. Скорпион — это знак внутренних изменений, преодоления слабости, борьбы до победного конца. Рожденный под этим знаком всю жизнь совершенствуется сам и стремится изменить мир к лучшему.</string>
    <string name="described9">Знак стихии огня, обладает ярко выраженной харизмой лидера, стремится к образованию, энергичен и увлечен идеей изменить весь мир. Всю жизнь Стрелец стремится к популярности, к высокой оценке своей работы и достижений со стороны близких людей. Стрелец почти всегда добивается успеха хотя бы в одном из многочисленных видов своей деятельности. У энергичного по натуре Стрельца обычно несколько специальностей, широкий спектр интересов и деловых связей. Свой бизнес, участие в общественной жизни нередко сопровождаются преподавательской или политической деятельностью.</string>
    <string name="described10">Знак земной стихии, Козерог обладает даром не терять из виду главную цель и долго жить.  Целеустремленность, стойкость в трудностях, ответственность — это сильные качества представителей этого знака. Козерог не боится одиночества, готов переносить любые житейские трудности, преодолеть любые препятствия. Свои глубокие чувства предпочитает никому не открывать, с трудом близко сходится с людьми и не любит терять дружеские связи. Если Козерогом кто-то пренебрег, то никогда не прощает и не возвращается. Но всегда готов оказать немалую помощь на деле, даже если не знаком с человеком лично. Основной целью типичного Козерога является достижение максимально высокого ранга относительно условий личного старта.  </string>
    <string name="described11">Знак фиксированного креста стихии воздуха — Водолей изменчив по натуре, но не любит перемены, полон противоречий. Яркий индивидуалист, Водолей склонен к перепадам настроения, то элегантен, то неряшлив, страдает отсутствием самодисциплины, решителен и обладает ярким темпераментом. Не выносит рутины и скучных обязанностей. Независимость — как главное условие деятельности.</string>
</resources>