<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fons">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/slide_5_scrin_1"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-light" />

                <DatePicker
                    android:id="@+id/datePicker"
                    style="@style/MyDatePickerDialogTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="45dp"
                    android:calendarTextColor="#FFFFFF"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:outlineAmbientShadowColor="#FFFFFF"
                    android:outlineSpotShadowColor="#FFFFFF"
                    android:yearListSelectorColor="#FFFFFF" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button"
                    android:onClick="next"
                    android:text="@string/next"
                    android:textColor="#2256E7"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/slide_5_scrin_2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:columnCount="2"
                        android:padding="26dp"
                        android:rowCount="2">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="man"
                            app:srcCompat="@drawable/man" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="girl"
                            app:srcCompat="@drawable/girl" />

                        <TextView
                            android:id="@+id/stlovext"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="30dp"
                            android:text="Мужчина"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/stsextx"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="8dp"
                            android:text="Женщина"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp" />

                    </GridLayout>

                </LinearLayout>

            </LinearLayout></LinearLayout>
    </ScrollView>


</RelativeLayout>